force-app/main/default/objects/Zuora_Customer_HPM_Charge_Field__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not this setting is &quot;Active&quot;. If so, will display onto Page</description>
    <inlineHelpText>Whether or not this setting is &quot;Active&quot;. If so, will display onto Page</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>