force-app/main/default/objects/Zuora_Customer_HPM_Charge_Field__c/fields/Charge_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Field_API_Name__c</fullName>
    <description>API Name of Charge Field to display</description>
    <inlineHelpText>API Name of Charge Field to display</inlineHelpText>
    <label>Charge Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>