force-app/main/default/objects/Zuora_Customer_HPM_Charge_Field__c/fields/Charge_Field_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Charge_Field_Display_Label__c</fullName>
    <description>Label to display in the Charge field table</description>
    <inlineHelpText>Label to display in the Charge field table</inlineHelpText>
    <label>Charge Field Display Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>